syntax = "proto3";
package go;

option go_package = "./";

message Order{  // since it has multiple messages within this message thus we will define all of them 
    message OrderProduct{
        string id = 1;
        string name  = 2;
        string description = 3;
        double price = 4;
        uint32 quantity = 5;
    }

    string id = 1;
    string createdAt =2;
    string accountId = 3;
    double totalPrice = 4;
    repeated OrderProduct producst = 5;
}

message PostOrderRequest{
    message OrderProduct{
        string productId = 2;
        uint32 quantity = 3;
    }
    string productId = 2;
    repeated OrderProduct quantity = 3;
}

message PostOrderResponse{
    Order order = 1;
}

message GetOrderRequest {
    string id = 1;
}

message GetOrderResponse{
    Order order = 1;
}

message GetOrdersAccountRequest{
    string accountId = 1;
}
message GetOrdersAccountResponse{
    repeated Order orders = 1;
}

service OrderService{
    rpc PostOrder(PostOrderRequest) returns (PostOrderResponse);
    rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
    rpc GetOrdersForAccount(GetOrdersAccountRequest) returns (GetOrdersAccountResponse);
}